# winApiRmt

./: .gitignore  ARCHITECTURE.md  BUILD.md  DRIVER_INSTALLATION.md  DYNAMIC_SHARED_BUFFERS.md  INSTALL_PODMAN.md  README.md  SHARED_MEMORY_ARCHITECTURE.md  SIGNING_DEBUG.md  WINDOWS_DRIVER_SETUP.md  build.sh  status.txt
azure/: .gitignore  SSH_USAGE.md  TIMING.md  azure_vm_manager.py  config.yaml  requirements.txt
azure/scripts/: README.md  setup-ssh-server.ps1  setup-ssh-simple.ps1  test-extension.ps1
common/: protocol.h
guest/: prepare_kernel.sh
guest/client/: Makefile  check_service.sh  check_service_verbose.sh  debug_info.sh  integration_test.sh  libwinapi.c  libwinapi.h  test_client.c  test_runner.sh
guest/driver/: Makefile  vmbus_client.c
guest/userspace/: libwinapi.c
host/driver/: api_handlers.c  vmbus_provider.c
host/driver/winApiRemoting/: .gitignore  COMPILE.md  README.md  README_SIGNING.md  api_handlers.c  build_driver.cmd  build_driver_manual.cmd  build_wdk.cmd  bypass_security_policy.cmd  check_boot_settings.cmd  cleanup_and_sign.ps1  create_cert_powershell.ps1  create_test_cert.cmd  debug_cert_signing.ps1  debug_install.cmd  diagnose_environment.cmd  find_msbuild.cmd  fix_build_directories.cmd  fix_cert_signing.ps1  force_test_signing.cmd  install_driver.cmd  install_driver_devcon.cmd  install_driver_direct.cmd  install_unsigned.ps1  install_unsigned_driver.cmd  makefile  reboot_and_test.cmd  sources  test_minimal.inf  test_signing.cmd  test_signing_capability.cmd  uninstall_driver.cmd  vmbus_privder.c  winApiRemoting.inf  winApiRemoting.sln  winApiRemoting.vcxproj  winApiRemoting.vcxproj.filters  winApiRemoting_minimal.inf
host/inf/: winapi_remoting.inf
host/service/: CMakeLists.txt  build.cmd  enable-tcp-shared-memory.ps1  install.cmd  main.cpp  uninstall.cmd
sdk/: .gitignore  LINUX_DEPENDENCIES.md  README.md  WINDOWS_SETUP.md  download_windows_dev_tools.sh  install_on_windows.cmd
tests/: test_build.sh
